# Internal-Banking-Assistant

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  PROOF_OF_FIXES.md  README.md  README_EVALUATION.md  ROOT_FILES_ANALYSIS.md  TEST_PARALLEL_SESSIONS.md  TOOLS_EVALUATION_REPORT.md  TOOLS_PURPOSE_GUIDE.md  UI_REFACTORING_PHASE_4_PLAN.md  WORK_LOG.md  coffee_base64.txt  convert_to_base64.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.claude/agents/: code-refactoring-specialist.md
.github/: dependabot.yml
.github/release_please/: .release-please-config.json
.github/workflows/: docs.yml  release-please.yml  tests.yml  tests.yml.disabled
api/reference/api-reference/: index.html
compatibility/compatibility_guide/: index.html
config/: README.md  settings.yaml
config/app/: settings_backup.yaml
config/deployment/docker/: Dockerfile.llamacpp-cpu  Dockerfile.ollama  Modelfile  Modelfile.llama31-m3max  Modelfile.m3max  README.Docker.md  docker-compose.yaml
config/environments/: docker.yaml  local.yaml
config/model-configs/: foundation-sec.yaml  ollama-optimized.yaml  ollama.yaml  openai.yaml  vllm.yaml
configs/: settings.yaml
configs/core/: settings.yaml  settings_backup.yaml
configs/docker/: Dockerfile.llamacpp-cpu  Dockerfile.ollama  docker-compose.yaml
configs/environments/: docker.yaml
developer/architecture/data-lifecycle/: index.html
developer/architecture/overview/: index.html
developer/autogen-integration/: index.html
developer/development/documentation-guidelines/: index.html
developer/development/package-structure/: index.html
developer/development/setup/: index.html
developer/parallel-sessions/: index.html
docs/: index.md
docs/api/reference/: api-reference.md  sdks.md
docs/compatibility/: compatibility_guide.md  compatibility_report.json
docs/developer/: autogen-integration.md  parallel-sessions.md
docs/developer/architecture/: data-lifecycle.md  document-categorization.md  overview.md  verification-infrastructure.md
docs/developer/design/: color-scheme.md
docs/developer/development/: component-integration.md  documentation-guidelines.md  extracted-components.md  package-structure.md  setup.md
docs/developer/guides/: documentation_transformation_prompt.md
docs/developer/reports/: backup-update-report.md  documentation-cleanup-summary.md  phase-1b-final-completion-report.md  status-update.json
docs/troubleshooting/: DIAGNOSTIC_TEST_INSTRUCTIONS.md  DOCSTORE_FIX_SUMMARY.md  PAGE_REFRESH_FIX.md  UI_HEADER_COUNT_FIX.md
docs/user/configuration/: llms.md  nodestore.md  reranker.md  settings.md  vectordb.md
docs/user/installation/: concepts.md  installation.md  troubleshooting.md
docs/user/usage/: ingestion-reset.md  ingestion.md  quickstart.md  summarize.md
examples/: autogen_poc.py
internal_assistant/: __init__.py  __main__.py  di.py  launcher.py  main.py  paths.py
internal_assistant/components/embedding/: embedding_component.py
internal_assistant/components/ingest/: ingest_component.py  ingest_component.py.backup-20251003-082216  ingest_component.py.old  ingest_helper.py
internal_assistant/components/llm/: llm_component.py  prompt_helper.py
internal_assistant/components/node_store/: node_store_component.py
internal_assistant/components/vector_store/: vector_store_component.py
internal_assistant/open_ai/: openai_models.py
internal_assistant/open_ai/extensions/: context_filter.py
internal_assistant/server/: __init__.py
internal_assistant/server/chat/: chat_router.py  chat_service.py
internal_assistant/server/chunks/: chunks_router.py  chunks_service.py
internal_assistant/server/completions/: completions_router.py
internal_assistant/server/embeddings/: embeddings_router.py  embeddings_service.py
internal_assistant/server/feeds/: background_refresh.py  feeds_router.py  feeds_service.py  forum_directory_service.py  forum_parser.py  simple_forum_router.py  simple_forum_service.py  threat_intelligence_router.py
internal_assistant/server/health/: health_router.py
internal_assistant/server/ingest/: ingest_router.py  ingest_service.py  model.py  storage_consistency_service.py  storage_management_service.py
internal_assistant/server/metadata/: metadata_router.py
internal_assistant/server/status/: status_router.py
internal_assistant/server/system/: __init__.py  system_router.py
internal_assistant/server/threat_intelligence/: mitre_attack_router.py  mitre_attack_service.py  threat_analyzer.py
internal_assistant/server/utils/: auth.py
internal_assistant/settings/: settings.py  settings_loader.py
internal_assistant/ui/: constants.py  images.py  ui.py  ui_strings.py
internal_assistant/ui/components/: __init__.py
internal_assistant/ui/core/: __init__.py  component_registry.py  error_boundaries.py  event_router.py  layout_manager.py  ui_component.py
internal_assistant/utils/: ollama.py  version_check.py
scripts/: analyze_models.py  check_model.py  cleanup_qdrant.py  cleanup_unused_models.py  ingest_folder.py  logging_control.py  manage_compatibility.py  manage_logs.py  start_parallel_session.sh
search/: search_index.json
tests/: conftest.py  test_prompt_helper.py
tests/components/: test_embedding_dimension.py
tests/fixtures/: auto_close_qdrant.py  fast_api_test_client.py  ingest_helper.py  mock_injector.py
tests/integration/: test_full_integration.py
tests/settings/: test_settings.py  test_settings_loader.py
tests/ui/: test_component_integration.py  test_time_filter_fix.py  test_ui_feeds_isolated.py  test_ui_integration.py
tools/: README.md
tools/Javascript/: README.md  __init__.py  js_manager.py
tools/analysis/: ui-dependency-analyzer.py
tools/maintenance/: README.md  analyze_models.py  cleanup_qdrant.py  cleanup_unused_models.py  logging_control.py  manage_logs.py
tools/storage/: direct_cleanup.py  storage_admin.py
tools/system/: README.md  check_model.py  extract_openapi.py  generate_compatibility_docs.py  manage_compatibility.py  utils.py
(+116 files in other folders)
